TC Project (Phase 3)/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    QMARK

Grammar

Rule 0     S' -> programb
Rule 1     programb -> program
Rule 2     program -> DECLARATION declaration
Rule 3     program -> DEFINITION definition
Rule 4     program -> DECLARATION declaration program
Rule 5     program -> DEFINITION definition program
Rule 6     declaration -> NAME LPAR dargument RPAR COLON types
Rule 7     declaration -> NAME LPAR dargument RPAR COLON VOID
Rule 8     declaration -> NAME LPAR RPAR COLON types
Rule 9     declaration -> NAME LPAR RPAR COLON VOID
Rule 10    definition -> NAME LPAR dargument RPAR COLON types block
Rule 11    definition -> NAME LPAR RPAR COLON types block
Rule 12    definition -> NAME LPAR RPAR COLON VOID block
Rule 13    definition -> NAME LPAR dargument RPAR COLON VOID block
Rule 14    types -> INT
Rule 15    types -> FLOATTYPE
Rule 16    types -> BOOL
Rule 17    types -> STRINGTYPE
Rule 18    dargument -> NAME COLON types
Rule 19    dargument -> NAME COLON types COMMA dargument
Rule 20    block -> LCURLY RCURLY
Rule 21    block -> LCURLY block_content RCURLY
Rule 22    block_content -> statement
Rule 23    block_content -> statement block_content
Rule 24    statement -> RETURN SEMICOLON
Rule 25    statement -> RETURN expression SEMICOLON
Rule 26    statement -> IF expression block
Rule 27    statement -> IF expression block ELSE block
Rule 28    statement -> WHILE expression block
Rule 29    statement -> NAME COLON types EQUALS expression SEMICOLON
Rule 30    statement -> NAME COLON types SEMICOLON
Rule 31    statement -> NAME EQUALS expression SEMICOLON
Rule 32    statement -> NAME COLON LBRACK types RBRACK SEMICOLON
Rule 33    statement -> NAME LBRACK expression RBRACK EQUALS expression SEMICOLON
Rule 34    statement -> expression SEMICOLON
Rule 35    expression -> expression SUM expression
Rule 36    expression -> expression SUB expression
Rule 37    expression -> expression MULTIPLY expression
Rule 38    expression -> expression DIVIDE expression
Rule 39    expression -> expression RESTOF expression
Rule 40    expression -> expression SAMEAS expression
Rule 41    expression -> expression NEQUAL expression
Rule 42    expression -> expression HEQUAL expression
Rule 43    expression -> expression LEQUAL expression
Rule 44    expression -> expression HIGHER expression
Rule 45    expression -> expression LOWER expression
Rule 46    expression -> expression AND expression
Rule 47    expression -> expression OR expression
Rule 48    expression -> TRUE
Rule 49    expression -> FALSE
Rule 50    expression -> DIFFER expression
Rule 51    expression -> NUMBER
Rule 52    expression -> FLOAT
Rule 53    expression -> STRING
Rule 54    expression -> NAME LBRACK expression RBRACK
Rule 55    expression -> NAME
Rule 56    expression -> LPAR expression RPAR
Rule 57    expression -> NAME LPAR RPAR LBRACK expression RBRACK
Rule 58    expression -> NAME LPAR argument RPAR LBRACK expression RBRACK
Rule 59    expression -> NAME LPAR RPAR
Rule 60    expression -> NAME LPAR argument RPAR
Rule 61    argument -> expression
Rule 62    argument -> expression COMMA argument

Terminals, with rules where they appear

AND                  : 46
BOOL                 : 16
COLON                : 6 7 8 9 10 11 12 13 18 19 29 30 32
COMMA                : 19 62
DECLARATION          : 2 4
DEFINITION           : 3 5
DIFFER               : 50
DIVIDE               : 38
ELSE                 : 27
EQUALS               : 29 31 33
FALSE                : 49
FLOAT                : 52
FLOATTYPE            : 15
HEQUAL               : 42
HIGHER               : 44
IF                   : 26 27
INT                  : 14
LBRACK               : 32 33 54 57 58
LCURLY               : 20 21
LEQUAL               : 43
LOWER                : 45
LPAR                 : 6 7 8 9 10 11 12 13 56 57 58 59 60
MULTIPLY             : 37
NAME                 : 6 7 8 9 10 11 12 13 18 19 29 30 31 32 33 54 55 57 58 59 60
NEQUAL               : 41
NUMBER               : 51
OR                   : 47
QMARK                : 
RBRACK               : 32 33 54 57 58
RCURLY               : 20 21
RESTOF               : 39
RETURN               : 24 25
RPAR                 : 6 7 8 9 10 11 12 13 56 57 58 59 60
SAMEAS               : 40
SEMICOLON            : 24 25 29 30 31 32 33 34
STRING               : 53
STRINGTYPE           : 17
SUB                  : 36
SUM                  : 35
TRUE                 : 48
VOID                 : 7 9 12 13
WHILE                : 28
error                : 

Nonterminals, with rules where they appear

argument             : 58 60 62
block                : 10 11 12 13 26 27 27 28
block_content        : 21 23
dargument            : 6 7 10 13 19
declaration          : 2 4
definition           : 3 5
expression           : 25 26 27 28 29 31 33 33 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 50 54 56 57 58 61 62
program              : 1 4 5
programb             : 0
statement            : 22 23
types                : 6 8 10 11 18 19 29 30 32

Parsing method: LALR

state 0

    (0) S' -> . programb
    (1) programb -> . program
    (2) program -> . DECLARATION declaration
    (3) program -> . DEFINITION definition
    (4) program -> . DECLARATION declaration program
    (5) program -> . DEFINITION definition program

    DECLARATION     shift and go to state 3
    DEFINITION      shift and go to state 4

    programb                       shift and go to state 1
    program                        shift and go to state 2

state 1

    (0) S' -> programb .



state 2

    (1) programb -> program .

    $end            reduce using rule 1 (programb -> program .)


state 3

    (2) program -> DECLARATION . declaration
    (4) program -> DECLARATION . declaration program
    (6) declaration -> . NAME LPAR dargument RPAR COLON types
    (7) declaration -> . NAME LPAR dargument RPAR COLON VOID
    (8) declaration -> . NAME LPAR RPAR COLON types
    (9) declaration -> . NAME LPAR RPAR COLON VOID

    NAME            shift and go to state 6

    declaration                    shift and go to state 5

state 4

    (3) program -> DEFINITION . definition
    (5) program -> DEFINITION . definition program
    (10) definition -> . NAME LPAR dargument RPAR COLON types block
    (11) definition -> . NAME LPAR RPAR COLON types block
    (12) definition -> . NAME LPAR RPAR COLON VOID block
    (13) definition -> . NAME LPAR dargument RPAR COLON VOID block

    NAME            shift and go to state 8

    definition                     shift and go to state 7

state 5

    (2) program -> DECLARATION declaration .
    (4) program -> DECLARATION declaration . program
    (2) program -> . DECLARATION declaration
    (3) program -> . DEFINITION definition
    (4) program -> . DECLARATION declaration program
    (5) program -> . DEFINITION definition program

    $end            reduce using rule 2 (program -> DECLARATION declaration .)
    DECLARATION     shift and go to state 3
    DEFINITION      shift and go to state 4

    program                        shift and go to state 9

state 6

    (6) declaration -> NAME . LPAR dargument RPAR COLON types
    (7) declaration -> NAME . LPAR dargument RPAR COLON VOID
    (8) declaration -> NAME . LPAR RPAR COLON types
    (9) declaration -> NAME . LPAR RPAR COLON VOID

    LPAR            shift and go to state 10


state 7

    (3) program -> DEFINITION definition .
    (5) program -> DEFINITION definition . program
    (2) program -> . DECLARATION declaration
    (3) program -> . DEFINITION definition
    (4) program -> . DECLARATION declaration program
    (5) program -> . DEFINITION definition program

    $end            reduce using rule 3 (program -> DEFINITION definition .)
    DECLARATION     shift and go to state 3
    DEFINITION      shift and go to state 4

    program                        shift and go to state 11

state 8

    (10) definition -> NAME . LPAR dargument RPAR COLON types block
    (11) definition -> NAME . LPAR RPAR COLON types block
    (12) definition -> NAME . LPAR RPAR COLON VOID block
    (13) definition -> NAME . LPAR dargument RPAR COLON VOID block

    LPAR            shift and go to state 12


state 9

    (4) program -> DECLARATION declaration program .

    $end            reduce using rule 4 (program -> DECLARATION declaration program .)


state 10

    (6) declaration -> NAME LPAR . dargument RPAR COLON types
    (7) declaration -> NAME LPAR . dargument RPAR COLON VOID
    (8) declaration -> NAME LPAR . RPAR COLON types
    (9) declaration -> NAME LPAR . RPAR COLON VOID
    (18) dargument -> . NAME COLON types
    (19) dargument -> . NAME COLON types COMMA dargument

    RPAR            shift and go to state 15
    NAME            shift and go to state 13

    dargument                      shift and go to state 14

state 11

    (5) program -> DEFINITION definition program .

    $end            reduce using rule 5 (program -> DEFINITION definition program .)


state 12

    (10) definition -> NAME LPAR . dargument RPAR COLON types block
    (11) definition -> NAME LPAR . RPAR COLON types block
    (12) definition -> NAME LPAR . RPAR COLON VOID block
    (13) definition -> NAME LPAR . dargument RPAR COLON VOID block
    (18) dargument -> . NAME COLON types
    (19) dargument -> . NAME COLON types COMMA dargument

    RPAR            shift and go to state 17
    NAME            shift and go to state 13

    dargument                      shift and go to state 16

state 13

    (18) dargument -> NAME . COLON types
    (19) dargument -> NAME . COLON types COMMA dargument

    COLON           shift and go to state 18


state 14

    (6) declaration -> NAME LPAR dargument . RPAR COLON types
    (7) declaration -> NAME LPAR dargument . RPAR COLON VOID

    RPAR            shift and go to state 19


state 15

    (8) declaration -> NAME LPAR RPAR . COLON types
    (9) declaration -> NAME LPAR RPAR . COLON VOID

    COLON           shift and go to state 20


state 16

    (10) definition -> NAME LPAR dargument . RPAR COLON types block
    (13) definition -> NAME LPAR dargument . RPAR COLON VOID block

    RPAR            shift and go to state 21


state 17

    (11) definition -> NAME LPAR RPAR . COLON types block
    (12) definition -> NAME LPAR RPAR . COLON VOID block

    COLON           shift and go to state 22


state 18

    (18) dargument -> NAME COLON . types
    (19) dargument -> NAME COLON . types COMMA dargument
    (14) types -> . INT
    (15) types -> . FLOATTYPE
    (16) types -> . BOOL
    (17) types -> . STRINGTYPE

    INT             shift and go to state 24
    FLOATTYPE       shift and go to state 25
    BOOL            shift and go to state 26
    STRINGTYPE      shift and go to state 27

    types                          shift and go to state 23

state 19

    (6) declaration -> NAME LPAR dargument RPAR . COLON types
    (7) declaration -> NAME LPAR dargument RPAR . COLON VOID

    COLON           shift and go to state 28


state 20

    (8) declaration -> NAME LPAR RPAR COLON . types
    (9) declaration -> NAME LPAR RPAR COLON . VOID
    (14) types -> . INT
    (15) types -> . FLOATTYPE
    (16) types -> . BOOL
    (17) types -> . STRINGTYPE

    VOID            shift and go to state 30
    INT             shift and go to state 24
    FLOATTYPE       shift and go to state 25
    BOOL            shift and go to state 26
    STRINGTYPE      shift and go to state 27

    types                          shift and go to state 29

state 21

    (10) definition -> NAME LPAR dargument RPAR . COLON types block
    (13) definition -> NAME LPAR dargument RPAR . COLON VOID block

    COLON           shift and go to state 31


state 22

    (11) definition -> NAME LPAR RPAR COLON . types block
    (12) definition -> NAME LPAR RPAR COLON . VOID block
    (14) types -> . INT
    (15) types -> . FLOATTYPE
    (16) types -> . BOOL
    (17) types -> . STRINGTYPE

    VOID            shift and go to state 33
    INT             shift and go to state 24
    FLOATTYPE       shift and go to state 25
    BOOL            shift and go to state 26
    STRINGTYPE      shift and go to state 27

    types                          shift and go to state 32

state 23

    (18) dargument -> NAME COLON types .
    (19) dargument -> NAME COLON types . COMMA dargument

    RPAR            reduce using rule 18 (dargument -> NAME COLON types .)
    COMMA           shift and go to state 34


state 24

    (14) types -> INT .

    COMMA           reduce using rule 14 (types -> INT .)
    RPAR            reduce using rule 14 (types -> INT .)
    DECLARATION     reduce using rule 14 (types -> INT .)
    DEFINITION      reduce using rule 14 (types -> INT .)
    $end            reduce using rule 14 (types -> INT .)
    LCURLY          reduce using rule 14 (types -> INT .)
    EQUALS          reduce using rule 14 (types -> INT .)
    SEMICOLON       reduce using rule 14 (types -> INT .)
    RBRACK          reduce using rule 14 (types -> INT .)


state 25

    (15) types -> FLOATTYPE .

    COMMA           reduce using rule 15 (types -> FLOATTYPE .)
    RPAR            reduce using rule 15 (types -> FLOATTYPE .)
    DECLARATION     reduce using rule 15 (types -> FLOATTYPE .)
    DEFINITION      reduce using rule 15 (types -> FLOATTYPE .)
    $end            reduce using rule 15 (types -> FLOATTYPE .)
    LCURLY          reduce using rule 15 (types -> FLOATTYPE .)
    EQUALS          reduce using rule 15 (types -> FLOATTYPE .)
    SEMICOLON       reduce using rule 15 (types -> FLOATTYPE .)
    RBRACK          reduce using rule 15 (types -> FLOATTYPE .)


state 26

    (16) types -> BOOL .

    COMMA           reduce using rule 16 (types -> BOOL .)
    RPAR            reduce using rule 16 (types -> BOOL .)
    DECLARATION     reduce using rule 16 (types -> BOOL .)
    DEFINITION      reduce using rule 16 (types -> BOOL .)
    $end            reduce using rule 16 (types -> BOOL .)
    LCURLY          reduce using rule 16 (types -> BOOL .)
    EQUALS          reduce using rule 16 (types -> BOOL .)
    SEMICOLON       reduce using rule 16 (types -> BOOL .)
    RBRACK          reduce using rule 16 (types -> BOOL .)


state 27

    (17) types -> STRINGTYPE .

    COMMA           reduce using rule 17 (types -> STRINGTYPE .)
    RPAR            reduce using rule 17 (types -> STRINGTYPE .)
    DECLARATION     reduce using rule 17 (types -> STRINGTYPE .)
    DEFINITION      reduce using rule 17 (types -> STRINGTYPE .)
    $end            reduce using rule 17 (types -> STRINGTYPE .)
    LCURLY          reduce using rule 17 (types -> STRINGTYPE .)
    EQUALS          reduce using rule 17 (types -> STRINGTYPE .)
    SEMICOLON       reduce using rule 17 (types -> STRINGTYPE .)
    RBRACK          reduce using rule 17 (types -> STRINGTYPE .)


state 28

    (6) declaration -> NAME LPAR dargument RPAR COLON . types
    (7) declaration -> NAME LPAR dargument RPAR COLON . VOID
    (14) types -> . INT
    (15) types -> . FLOATTYPE
    (16) types -> . BOOL
    (17) types -> . STRINGTYPE

    VOID            shift and go to state 36
    INT             shift and go to state 24
    FLOATTYPE       shift and go to state 25
    BOOL            shift and go to state 26
    STRINGTYPE      shift and go to state 27

    types                          shift and go to state 35

state 29

    (8) declaration -> NAME LPAR RPAR COLON types .

    DECLARATION     reduce using rule 8 (declaration -> NAME LPAR RPAR COLON types .)
    DEFINITION      reduce using rule 8 (declaration -> NAME LPAR RPAR COLON types .)
    $end            reduce using rule 8 (declaration -> NAME LPAR RPAR COLON types .)


state 30

    (9) declaration -> NAME LPAR RPAR COLON VOID .

    DECLARATION     reduce using rule 9 (declaration -> NAME LPAR RPAR COLON VOID .)
    DEFINITION      reduce using rule 9 (declaration -> NAME LPAR RPAR COLON VOID .)
    $end            reduce using rule 9 (declaration -> NAME LPAR RPAR COLON VOID .)


state 31

    (10) definition -> NAME LPAR dargument RPAR COLON . types block
    (13) definition -> NAME LPAR dargument RPAR COLON . VOID block
    (14) types -> . INT
    (15) types -> . FLOATTYPE
    (16) types -> . BOOL
    (17) types -> . STRINGTYPE

    VOID            shift and go to state 38
    INT             shift and go to state 24
    FLOATTYPE       shift and go to state 25
    BOOL            shift and go to state 26
    STRINGTYPE      shift and go to state 27

    types                          shift and go to state 37

state 32

    (11) definition -> NAME LPAR RPAR COLON types . block
    (20) block -> . LCURLY RCURLY
    (21) block -> . LCURLY block_content RCURLY

    LCURLY          shift and go to state 40

    block                          shift and go to state 39

state 33

    (12) definition -> NAME LPAR RPAR COLON VOID . block
    (20) block -> . LCURLY RCURLY
    (21) block -> . LCURLY block_content RCURLY

    LCURLY          shift and go to state 40

    block                          shift and go to state 41

state 34

    (19) dargument -> NAME COLON types COMMA . dargument
    (18) dargument -> . NAME COLON types
    (19) dargument -> . NAME COLON types COMMA dargument

    NAME            shift and go to state 13

    dargument                      shift and go to state 42

state 35

    (6) declaration -> NAME LPAR dargument RPAR COLON types .

    DECLARATION     reduce using rule 6 (declaration -> NAME LPAR dargument RPAR COLON types .)
    DEFINITION      reduce using rule 6 (declaration -> NAME LPAR dargument RPAR COLON types .)
    $end            reduce using rule 6 (declaration -> NAME LPAR dargument RPAR COLON types .)


state 36

    (7) declaration -> NAME LPAR dargument RPAR COLON VOID .

    DECLARATION     reduce using rule 7 (declaration -> NAME LPAR dargument RPAR COLON VOID .)
    DEFINITION      reduce using rule 7 (declaration -> NAME LPAR dargument RPAR COLON VOID .)
    $end            reduce using rule 7 (declaration -> NAME LPAR dargument RPAR COLON VOID .)


state 37

    (10) definition -> NAME LPAR dargument RPAR COLON types . block
    (20) block -> . LCURLY RCURLY
    (21) block -> . LCURLY block_content RCURLY

    LCURLY          shift and go to state 40

    block                          shift and go to state 43

state 38

    (13) definition -> NAME LPAR dargument RPAR COLON VOID . block
    (20) block -> . LCURLY RCURLY
    (21) block -> . LCURLY block_content RCURLY

    LCURLY          shift and go to state 40

    block                          shift and go to state 44

state 39

    (11) definition -> NAME LPAR RPAR COLON types block .

    DECLARATION     reduce using rule 11 (definition -> NAME LPAR RPAR COLON types block .)
    DEFINITION      reduce using rule 11 (definition -> NAME LPAR RPAR COLON types block .)
    $end            reduce using rule 11 (definition -> NAME LPAR RPAR COLON types block .)


state 40

    (20) block -> LCURLY . RCURLY
    (21) block -> LCURLY . block_content RCURLY
    (22) block_content -> . statement
    (23) block_content -> . statement block_content
    (24) statement -> . RETURN SEMICOLON
    (25) statement -> . RETURN expression SEMICOLON
    (26) statement -> . IF expression block
    (27) statement -> . IF expression block ELSE block
    (28) statement -> . WHILE expression block
    (29) statement -> . NAME COLON types EQUALS expression SEMICOLON
    (30) statement -> . NAME COLON types SEMICOLON
    (31) statement -> . NAME EQUALS expression SEMICOLON
    (32) statement -> . NAME COLON LBRACK types RBRACK SEMICOLON
    (33) statement -> . NAME LBRACK expression RBRACK EQUALS expression SEMICOLON
    (34) statement -> . expression SEMICOLON
    (35) expression -> . expression SUM expression
    (36) expression -> . expression SUB expression
    (37) expression -> . expression MULTIPLY expression
    (38) expression -> . expression DIVIDE expression
    (39) expression -> . expression RESTOF expression
    (40) expression -> . expression SAMEAS expression
    (41) expression -> . expression NEQUAL expression
    (42) expression -> . expression HEQUAL expression
    (43) expression -> . expression LEQUAL expression
    (44) expression -> . expression HIGHER expression
    (45) expression -> . expression LOWER expression
    (46) expression -> . expression AND expression
    (47) expression -> . expression OR expression
    (48) expression -> . TRUE
    (49) expression -> . FALSE
    (50) expression -> . DIFFER expression
    (51) expression -> . NUMBER
    (52) expression -> . FLOAT
    (53) expression -> . STRING
    (54) expression -> . NAME LBRACK expression RBRACK
    (55) expression -> . NAME
    (56) expression -> . LPAR expression RPAR
    (57) expression -> . NAME LPAR RPAR LBRACK expression RBRACK
    (58) expression -> . NAME LPAR argument RPAR LBRACK expression RBRACK
    (59) expression -> . NAME LPAR RPAR
    (60) expression -> . NAME LPAR argument RPAR

    RCURLY          shift and go to state 45
    RETURN          shift and go to state 48
    IF              shift and go to state 50
    WHILE           shift and go to state 51
    NAME            shift and go to state 52
    TRUE            shift and go to state 53
    FALSE           shift and go to state 54
    DIFFER          shift and go to state 55
    NUMBER          shift and go to state 56
    FLOAT           shift and go to state 57
    STRING          shift and go to state 58
    LPAR            shift and go to state 59

    block_content                  shift and go to state 46
    statement                      shift and go to state 47
    expression                     shift and go to state 49

state 41

    (12) definition -> NAME LPAR RPAR COLON VOID block .

    DECLARATION     reduce using rule 12 (definition -> NAME LPAR RPAR COLON VOID block .)
    DEFINITION      reduce using rule 12 (definition -> NAME LPAR RPAR COLON VOID block .)
    $end            reduce using rule 12 (definition -> NAME LPAR RPAR COLON VOID block .)


state 42

    (19) dargument -> NAME COLON types COMMA dargument .

    RPAR            reduce using rule 19 (dargument -> NAME COLON types COMMA dargument .)


state 43

    (10) definition -> NAME LPAR dargument RPAR COLON types block .

    DECLARATION     reduce using rule 10 (definition -> NAME LPAR dargument RPAR COLON types block .)
    DEFINITION      reduce using rule 10 (definition -> NAME LPAR dargument RPAR COLON types block .)
    $end            reduce using rule 10 (definition -> NAME LPAR dargument RPAR COLON types block .)


state 44

    (13) definition -> NAME LPAR dargument RPAR COLON VOID block .

    DECLARATION     reduce using rule 13 (definition -> NAME LPAR dargument RPAR COLON VOID block .)
    DEFINITION      reduce using rule 13 (definition -> NAME LPAR dargument RPAR COLON VOID block .)
    $end            reduce using rule 13 (definition -> NAME LPAR dargument RPAR COLON VOID block .)


state 45

    (20) block -> LCURLY RCURLY .
